# test_sanitize_workflow

./: Cargo.toml  README.md
.github/workflows/: release.yml  sanitize-cargo.yml
src/: main.rs
